--- a/style.css
+++ b/style.css
@@ -2,8 +2,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 
+
+:root {
+    --cor0: #E2E6E0;
+    --cor1: #839490;
+    --cor2: #0c3029;
+    --cor3: #52a084;
+    --cor4: #13544d;
+}
+
 * {
-    font-family: 'Poppins', sans-serif;
     margin: 0px;
     padding:0px;
     box-sizing: border-box;
@@ -11,13 +19,11 @@
 
 body{
     background-attachment: fixed;
-
 }
 
 main {
     min-width: 380px;
     max-width: 1200px;
-    background-color: rgba(211, 211, 211, 0.192);
     margin: auto;
 }
 
@@ -25,31 +31,39 @@ nav {
     display: flex;
     position: relative;
     justify-content: center;
-    font-family: 'Poppins', sans-serif;
-    font-weight: bolder;
+    font-family: 'Open Sans', sans-serif;
     background-color: #0C3029;
-    font-size: 1.1em;
+    font-size: 1.03em;
     width: 100%;
-    height: 160px;
+    height: 180px;
 }
 
 nav > a {
-    color: rgb(249, 249, 249);
+    color: var(--cor1);
     text-decoration: none;
     padding: 20px;
     margin: auto;
 }
 
 nav > a:hover {
-    color: #839490;
+    color: var(--cor0);
+    text-decoration: underline;
 }
 
-img.logo {
+.logo {
     display: flex;
     position: relative;
     width: 130px;
     height: 130px;
+    padding-top: 10px;
     margin: auto;
+}
+
+.logo-txt {
+    font-family: 'Poppins', sans-serif;
+    color: var(--cor0);
+    padding-left: 20px;
+    font-size: 0.93em;
 }
 
 .cenarium img {
@@ -58,7 +72,22 @@ img.logo {
     justify-content: center;
     width: 100%;
     object-fit: contain;
-    margin-bottom: 80px;
+}
+
+h1 {
+    background-color: white;
+    color: rgb(131, 148, 144);
+    font-size: 6em;
+    font-family: Impact, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+    padding-top: 40px;
+    max-width: 100%;
+}
+
+h1 span {
+    color: rgba(169, 169, 169, 0.709);
+    background-color: white;
+    font-family: Impact, 'Arial Narrow Bold', sans-serif;
 }
 
 .inspiracao {
@@ -67,48 +96,26 @@ img.logo {
     background-color: white;
 }
 
-.inspiracao h1 {
-    background-color: white;
-    color: rgb(131, 148, 144);
-    font-size: 6em;
-    font-family: Impact, 'Arial Narrow Bold', sans-serif;
-    max-width: 90%;
-    margin: auto;
-}
-
-section h1 span {
-    color: rgba(169, 169, 169, 0.709);
-    background-color: white;
-    font-family: Impact, 'Arial Narrow Bold', sans-serif;
-}
-
 .inspiracao p {
     margin-top: 70px;
     width: 600px;
-    padding-left: 50px;
-    font-size: 24px;
-}
-
-.texto1 {
+    padding: 0px 40px;
+    margin-left: 40px;
     font-family: 'Poppins', sans-serif;
+    font-size: 28px;
     background-color: white;
     text-align: justify;
     color: grey;
     height: 950px;
-    width: 100%;
-    padding: 0px 100px 30px 20px;
 }
 
-div.bolas {
-
-}
-
-.bola3 {
-    width: 300px;
-    height: 300px;
+.bola1 {
+    display: block;
+    width: 400px;
+    height: 400px;
     border-radius: 50% 50%;
-    margin-left: 80px;
-    margin-top: 180px;
+    margin-left: 100px;
+    margin-top: 50px;
     box-shadow: 0px 15px 30px 2px rgba(0, 0, 0, 0.667);
 }
 
@@ -116,17 +123,17 @@ div.bolas {
     width: 300px;
     height: 300px;
     border-radius: 50% 50%;
-    margin-right: 20px;
-    margin-top: 80px;
+    margin-right: 150px;
+    margin-top: 70px;
     box-shadow: 0px 15px 30px 2px rgba(0, 0, 0, 0.667);
 }
 
-.bola1 {
-    width: 400px;
-    height: 400px;
+.bola3 {
+    width: 300px;
+    height: 300px;
     border-radius: 50% 50%;
-    margin-right: 20px;
-    margin-top: 180px;
+    margin-left: 80px;
+    margin-top: 100px;
     box-shadow: 0px 15px 30px 2px rgba(0, 0, 0, 0.667);
 }
 
@@ -140,6 +147,7 @@ h2 {
 
 .segundoh2 {
     text-align: center;
+    margin-top: 20px;
     padding-bottom: 40px;
     font-size: 3em;
 
@@ -172,19 +180,7 @@ section.natureza > p {
     margin-left: 30px;
 }
 
-.texto3 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.5em;
-    text-align: center;
-    color: rgb(57, 89, 79);
-    background-color: #E2E6E0;
-    border-radius: 10px;
-    max-width: 60%;
-    padding: 20px;
-    margin: auto;
-}
-
-.galeria {
+.icos {
     display: flex;
     position: relative;
     justify-content: center;
@@ -192,14 +188,20 @@ section.natureza > p {
     border-radius: 5px;
 /*Parte do código que busquei no Google para por zoom na galeria*/
     overflow: hidden;
- 
 }
 
-.galeria img {
+.icos p {
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    color: #39594f;
+}
+
+.icos img {
     display: flex;
     position: relative;
-    height: 175px;
-    width: 183px;
+    height: 80px;
+    width: 80px;
+    margin: 30px;
     border-radius: 5px 5px 5px 5px;
 /*Parte do código que busquei no Google para por zoom na galeria*/
     max-width: 100%;
@@ -208,106 +210,362 @@ section.natureza > p {
     transition: all 0.5s;
 }
 
-.galeria:hover img {
+.icos:hover img {
     -moz-transform: scale(1.2);
     -webkit-transform: scale(1.2);
     transform: scale(1.1);
-  }
-
-
-.fotos {
-    padding: 10px;
 }
 
-.finalizando {
-    background-color: white;
-    padding-top: 70px;
-    padding-bottom: 70px;
+article.texto3 {
+    display: block;
+    margin: auto;
+    margin-top: 70px;
+    margin-bottom: 70px;
 }
 
-.final {
-    display: inline-block;
-    position: relative;
-    color: rgb(57, 89, 79);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1em;
-    font-weight: bold;
-    padding-top: 0px;
-    width: 50%;
-    left: 10px;
-    top: 98px;
-    line-height: 2.5em;
-}
-
-.final a {
-    text-decoration: none;
-    color: rgb(57, 89, 79);
-}
-
-.final a:hover {
-    color: darkblue;
-}
-
-.google {
-    display: inline-block;
-    position: relative;
-    padding-bottom: 5px;
-    height: 200px;
-    width: 350px;
-    left: 75vh;
-    top: -180px;
-    transform: translate(-30%);
-}
-
-.google iframe{
-    left:5vh;
-    top:0;
-    height: 120%;
-    width:120%;
-    position:absolute;
-    border-radius: 5px;
+.texto3 {
+    font-family: Verdana, Tahoma, sans-serif;
+    font-size: 1.2em;
+    text-align: center;
+    color: #39594f;
+    background-color: var(--cor0);
+    border-radius: 10px;
+    max-width: 45%;
+    padding: 20px;
 }
 
 footer {
-    background-color: black;
-    padding: 0px;
-    width: 1200px;
-    margin: auto;
-}
-
-.assinatura {
-    display: inline-block;
-    position: absolute;
-    color: gray;
-    text-align: left;
-    padding-left: 10px;
+    font-family: 'Poppins', sans-serif;
     font-size: 0.7em;
-
+    width: 100%;
 }
 
-.assinatura a {
-    text-decoration: underline;
-    color: gray;
+footer a {
+    color: var(--cor1);
 }
 
-.assinatura a:hover {
-    background-color: lightgrey;
-    border-radius: 10px;
-    padding: 5px;
+footer a:hover {
+    color: white;
 }
 
-.assinatura p {
-    padding-top: 10px;
+div.localizacao {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: var(--cor0);
+    height: 400px;
 }
 
-.redesocial {
+.endereco {
     display: inline-block;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.6em;
+    line-height: 2.5em;
+    color: #39594f;
+    padding: 40px;
+}
+
+.endereco a {
+    text-decoration: none;
+    color: #39594f;
+}
+
+.endereco a:hover {
+    text-decoration: underline;
+    color: #39594f;
+}
+
+.google iframe{
+    display: inline-block;
+    height: 250px;
+    width: 450px;
+    border-radius: 5px;
+}
+
+div.final {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #0C3029;
+    padding: 50px;
+    height: 140px;
+}
+
+.texto-a-esquerda {
+    display: inline-block;
+    color: var(--cor0);
+}
+
+.texto-a-direita {
+    display: inline-block;
+    color: var(--cor1);
+}
+
+img.logo-rodape {
+    display: flex;
+    width: 120px;
+    height: 120px;
+}
+
+/* QUEM SOMOS */
+
+#quem-somos {
+    background-image: url('./imagens/quemsomos.jpg');
+    background-repeat: no-repeat;
+}
+
+h3 {
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: var(--cor0);
+    margin-top: 80px;
+    padding-bottom: 80px;
+    font-size: 3em;
+}
+
+.paralax2 p {
+    display: block;
+    font-family: 'Poppins', sans-serif;
+    text-align: justify;
+    color: var(--cor0);
+    font-size: 2em;
+    height: 350px;
+    width: 500px;
+    margin-bottom: 110px;
+}
+
+p.dois {
+    display: flex;
+    margin-left: 500px;
+}
+
+p.tres {
+    display: flex;
+    margin-left: 250px;
+}
+
+/* CONTATO 
+Revisar todas as declarações
+*/
+
+.contato img {
+    display: flex;
     position: relative;
-    background-image: url('./imagens/social.png');
-    background-size: cover;
-    background-color: black;
-    height: 28px;
-    width: 28px;
-    left: 95vh;
-    bottom: 0px;
+    justify-content: center;
+    width: 100%;
+    object-fit: contain;
+}
+
+h4 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 48px;
+    color: var(--cor2);
+    padding-bottom: 10px;
+}
+
+.contato-form p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2em;
+    color: var(--cor1);
+    padding-bottom: 30px;
+}
+
+form.formulario {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 0px 5px 5px 0px;
+    padding: 10px;
+    width: 100%;
+    height: 400px;
+}
+
+input.inp {
+    outline: none;
+    padding: 10px;
+    margin-bottom: 15px;
+    font-size: 0.9em;
+    background-color: #ffffff;
+    border-radius: 5px;
+    width: 39vw;
+    border: 1px solid var(--cor2);
+}
+
+.formulario .inp:focus {
+    border: 2px solid;
+    transition: 200ms;
+}
+
+.formulario .inp::placeholder {
+    color: var(--cor2);
+}
+
+textarea {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    color: var(--cor2);
+    outline: none;
+    padding-left: 8px;
+    margin-bottom: 15px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    border-color: var(--cor2);
+    width: 78.5vw;
+    resize: none;
+}
+
+textarea:focus {
+    border: 2px solid;
+    transition: 200ms;
+}
+
+textarea::placeholder {
+    color: var(--cor2);
+}
+
+.botao-enviar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px;
+    height: 35px;
+    width: 100px;
+    cursor: pointer;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid var(--cor2);
+    background-color: var(--cor1);
+    color: var(--cor0);
+}
+
+.botao-enviar:hover {
+    border-width: 2.5px;
+    transition: 200ms ease;
+}
+
+/* ÁREA DO USUÁRIO 
+Texto tem um erro de português
+*/
+
+#usuario {
+    background-color: var(--cor0);
+}
+
+.usuario img {
+    display: flex;
+    margin: auto;
+    width: 70vw;
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+
+/* GALERIA */
+
+.texto-galeria {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.5em;
+    color: var(--cor1);
+    padding: 40px 0px;
+    text-align: center;
+}
+
+.container-galeria {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-rows: 250px;
+    padding: 15px 15px 80px;
+    grid-gap: 5px;
+}
+
+.item-galeria {
+    position: relative;
+}
+
+.item-galeria .img-galeria {
+    width: 100%;
+    height: 100%;
+    vertical-align: top;
+    object-fit: cover;
+    transition: transform .2s;
+    border: 2px solid white;
+}
+
+.item-galeria img:hover {
+    transform: scale(1.05);
+
+}
+
+.w-2 {
+    grid-column: span 2;
+}
+
+@media (max-width: 768px) {
+    .container-galeria {
+        grid-template-columns: repeat(1, 1fr);
+        grid-auto-rows: 50vh;
+    }
+
+    .w-2 {
+        grid-column: span 1;
+    } 
+}
+
+.lightbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .5);
+    width: 100%;
+    height: 100vh;
+    z-index: 1000;
+    transform: scale(0);
+    transition: transform .4s ease-in-out;
+}
+
+.lightbox img {
+    width: 70vw;
+    max-height: 70vh;
+    object-fit: contain;
+}
+
+.lightbox:target {
+    transform: scale(1);
+}
+
+.close {
+    display: block;
+    position: absolute;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 1.3em;
+    top: 40px;
+    right: 40px;
+    background:var(--cor2);
+    color:#ffffff;
+    text-decoration: none;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+
+.next {
+    display: block;
+    background: var(--cor2);
+    font-size: 2em;
+    color: #ffffff;
+    width: 40px;
+    height: 40px;
+    line-height: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
 }
