--- a/style.css
+++ b/style.css
@@ -21,12 +21,6 @@ body{
     background-attachment: fixed;
 }
 
-main {
-    /* min-width: 380px;
-    max-width: 1200px;
-    margin: auto; */
-}
-
 nav {
     display: flex;
     position: relative;
@@ -143,10 +137,37 @@ ul.nav-list {
         z-index: 1;
     }
 
-    
+    header h1 {
+        font-size: 15vw;
+        justify-content: center;
+    }
+
+    div.bolas {
+        display: none;
+    }
+
+    .inspiracao div p {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+        padding: 10px;
+        width: 320px;
+        font-size: 4vw;
+    }
+
+    img.bola1 {
+        width: 90vw;
+        object-fit: cover;
+    }
+
+    div.localizacao {
+        display: flex;
+        flex-direction: column;
+    }
 }
   
-
   
   @keyframes navLinkFade {
     from {
@@ -487,6 +508,11 @@ h3 {
     margin-bottom: 110px;
 }
 
+p.um {
+    display: flex;
+    margin-left: 30px;
+}
+
 p.dois {
     display: flex;
     margin-left: 500px;
@@ -495,6 +521,135 @@ p.dois {
 p.tres {
     display: flex;
     margin-left: 250px;
+}
+
+@media (max-width: 768px) {
+    p.um, p.dois, p.tres {
+        margin: auto;
+        margin-bottom: 20px;
+        padding: 10px;
+        font-size: 5vw;
+    }
+
+    .paralax2 p {
+        width: 320px;
+
+    }
+
+    .paralax2 h3 {
+        margin-top: 30px;
+        padding-bottom: 30px;
+    }
+}
+
+
+
+/* GALERIA */
+
+.texto-galeria {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.5em;
+    color: var(--cor1);
+    padding: 40px 0px;
+    text-align: center;
+}
+
+.container-galeria {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-rows: 250px;
+    padding: 15px 15px 80px;
+    grid-gap: 5px;
+}
+
+.item-galeria {
+    position: relative;
+}
+
+.item-galeria .img-galeria {
+    width: 100%;
+    height: 100%;
+    vertical-align: top;
+    object-fit: cover;
+    transition: transform .2s;
+    border: 2px solid white;
+    box-shadow: 5px 8px 5px -9px rgba(0, 0, 0, 0.667);
+}
+
+.item-galeria img:hover {
+    transform: scale(1.05);
+
+}
+
+.w-2 {
+    grid-column: span 2;
+}
+
+@media (max-width: 768px) {
+    .container-galeria {
+        grid-template-columns: repeat(1, 1fr);
+        grid-auto-rows: 50vh;
+    }
+
+    .w-2 {
+        grid-column: span 1;
+    } 
+}
+
+.lightbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .5);
+    width: 100%;
+    height: 100vh;
+    z-index: 1000;
+    transform: scale(0);
+    transition: transform .4s ease-in-out;
+}
+
+.lightbox img {
+    width: 70vw;
+    max-height: 70vh;
+    object-fit: contain;
+}
+
+.lightbox:target {
+    transform: scale(1);
+}
+
+.close {
+    display: block;
+    position: absolute;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 1.3em;
+    top: 40px;
+    right: 40px;
+    background:var(--cor2);
+    color:#ffffff;
+    text-decoration: none;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+
+.next {
+    display: block;
+    background: var(--cor2);
+    font-size: 2em;
+    color: #ffffff;
+    width: 40px;
+    height: 40px;
+    line-height: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
 }
 
 /* CONTATO 
@@ -622,112 +777,4 @@ Texto tem um erro de português
         width: 90vw;
     }
 
-}
-
-/* GALERIA */
-
-.texto-galeria {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.5em;
-    color: var(--cor1);
-    padding: 40px 0px;
-    text-align: center;
-}
-
-.container-galeria {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: 250px;
-    padding: 15px 15px 80px;
-    grid-gap: 5px;
-}
-
-.item-galeria {
-    position: relative;
-}
-
-.item-galeria .img-galeria {
-    width: 100%;
-    height: 100%;
-    vertical-align: top;
-    object-fit: cover;
-    transition: transform .2s;
-    border: 2px solid white;
-    box-shadow: 5px 8px 5px -9px rgba(0, 0, 0, 0.667);
-}
-
-.item-galeria img:hover {
-    transform: scale(1.05);
-
-}
-
-.w-2 {
-    grid-column: span 2;
-}
-
-@media (max-width: 768px) {
-    .container-galeria {
-        grid-template-columns: repeat(1, 1fr);
-        grid-auto-rows: 50vh;
-    }
-
-    .w-2 {
-        grid-column: span 1;
-    } 
-}
-
-.lightbox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, .5);
-    width: 100%;
-    height: 100vh;
-    z-index: 1000;
-    transform: scale(0);
-    transition: transform .4s ease-in-out;
-}
-
-.lightbox img {
-    width: 70vw;
-    max-height: 70vh;
-    object-fit: contain;
-}
-
-.lightbox:target {
-    transform: scale(1);
-}
-
-.close {
-    display: block;
-    position: absolute;
-    font-family: 'Poppins', sans-serif;
-    font-weight: bold;
-    font-size: 1.3em;
-    top: 40px;
-    right: 40px;
-    background:var(--cor2);
-    color:#ffffff;
-    text-decoration: none;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    border-radius: 50%;
-}
-
-.next {
-    display: block;
-    background: var(--cor2);
-    font-size: 2em;
-    color: #ffffff;
-    width: 40px;
-    height: 40px;
-    line-height: 30px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 50%;
 }
