--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ h1 {
     font-family: Impact, 'Arial Narrow Bold', sans-serif;
     text-align: center;
     padding-top: 40px;
+    margin-bottom: 50px;
     max-width: 100%;
 }
 
@@ -129,65 +130,40 @@ h1 span {
 }
 
 .inspiracao {
-    min-width: 320px;
-    max-width: 1200px;
-    margin: auto;
-    display: flex;
-    padding-top: 0px;
+    display: grid;
+    grid-template-columns: 70% 30%;
+    grid-template-rows: 33% 33% 33%;
+    gap: 5px;
     background-color: white;
+    max-width: 900px;
+    margin: 0 auto;
+    /* border: 1px solid var(--cor1); */
 }
 
-/* #home {
-    min-width: 320px;
-    max-width: 1200px;
+.inspiracao div {
+    /* background-color: #0C3029; */
     margin: auto;
-} */
+}
 
-.inspiracao p {
-    margin-top: 70px;
-    width: 600px;
-    padding: 0px 40px;
-    margin-left: 40px;
+.texto1 {
+    grid-row: 1/4;
+    padding: 0px 105px 0px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 28px;
-    background-color: white;
+    font-size: 1.8em;
+    line-height: 1.6;
     text-align: justify;
     color: grey;
-    height: 600px;
 }
 
-div.bolas {
-    display: flex;
-    flex-direction: column;
+.bolas img {
+    max-width: 100%;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    box-shadow: 0px 15px 30px 2px rgba(0, 0, 0, 0.667);
 }
 
 .bola1 {
-    display: block;
-    width: 400px;
-    height: 400px;
-    border-radius: 50% 50%;
-    margin-left: 150px;
-    margin-top: 50px;
-    box-shadow: 0px 15px 30px 2px rgba(0, 0, 0, 0.667);
-}
-
-.bola2 {
-    width: 300px;
-    height: 300px;
-    border-radius: 50% 50%;
-    margin-right: 150px;
-    margin-top: 70px;
-    box-shadow: 0px 15px 30px 2px rgba(0, 0, 0, 0.667);
-}
-
-.bola3 {
-    width: 300px;
-    height: 300px;
-    border-radius: 50% 50%;
-    margin-left: 110px;
-    margin-top: 100px;
-    box-shadow: 0px 15px 30px 2px rgba(0, 0, 0, 0.667);
-    object-fit: cover;
+    margin-top: 60px;
 }
 
 h2 {
@@ -257,9 +233,7 @@ p.frase-estrutura2 a:hover {
     background: var(--cor0);
     padding: 5px;
     border-radius: 5px;
-    
 }
-
 
 .icos {
     display: flex;
@@ -395,13 +369,18 @@ img.logo-rodape {
 
 /* Mobile: */
 
-@media (max-width: 830px) {
+@media (max-width: 800px) {
     span.logo {
         margin-right: 20px;
     }
     
     .nav-list a {
        padding: 10px;
+    }
+
+    .texto1 {
+        font-size: 1.5rem;
+        margin: auto;
     }
 }
 
@@ -464,32 +443,28 @@ img.logo-rodape {
         justify-content: center;
     }
 
-    div.bolas {
+    .inspiracao {
+        display: block;
+    }
+
+    div.texto1 {
+        font-size: clamp(0.5em, 1.2em, 1.2em);
+        margin: auto;
+        padding: 0px 25px;
+    }
+
+    .bolas img {
         display: none;
     }
 
-    .inspiracao {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .inspiracao div p {
-        padding: 10px;
-        width: 40vw;
-        font-size: 4vw;
-        margin-bottom: 50px;
-        margin-left: 40px;
-    }
-
-    img.bola1 {
-        max-width: 95vw;
-        width: 350px;
-        height: 350px;
-        object-fit: cover;
-        margin: auto;
-        margin-top: 80px;
+    section.natureza p {
+        display: inline-block;
+        width: 80vw;
+        margin-top: 150px;
+        padding: 20px;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 1.5em;
+        background-color: rgba(0, 0, 0, 0.245);
     }
 
     .icos{
@@ -568,8 +543,7 @@ img.logo-rodape {
   
   .mobile-menu.active .line3 {
     transform: rotate(45deg) translate(-3px, -4px);
-}
-/* End of menus */
+}  /* End of menus */
 
 
 /* QUEM SOMOS */
