--- a/style.css
+++ b/style.css
@@ -457,8 +457,12 @@ img.logo-rodape {
         display: none;
     }
 
+    section#paralax {
+        background-attachment: fixed;
+        background-size: cover;
+    }
+
     section.natureza p {
-        display: inline-block;
         width: 80vw;
         margin-top: 150px;
         padding: 20px;
@@ -466,6 +470,24 @@ img.logo-rodape {
         font-size: 1.5em;
         background-color: rgba(0, 0, 0, 0.245);
     }
+
+
+    /* section#paralax {
+        color: white;
+        background-image: url('./imagens/paralax.JPG');
+        background-position: center;
+    }
+    
+    section.natureza {
+        background-size: cover;
+        background-attachment: fixed;
+        box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.489);
+        height: 800px;
+        width: 100vw;
+    } */
+
+
+
 
     .icos{
         display: grid;
